# EnhancedLiDAR

./: README.md  instruction
devel/: .catkin  .rosinstall
devel/lib/EnhancedLiDAR/: EnhancedLiDAR_node
devel/lib/pkgconfig/: EnhancedLiDAR.pc
devel/share/EnhancedLiDAR/cmake/: EnhancedLiDARConfig.cmake
pic/: car_3D_AVOD-FPN.eps
preprocessing/: label_filter  label_filter.cpp
src/EnhancedLiDAR/: CMakeLists.txt  EnhancedLiDAR.launch  package.xml
src/EnhancedLiDAR/include/: EnhancedLiDAR_core.h  geometry.h  ground_remove_RANSAC.h  submission.h
src/EnhancedLiDAR/src/: EnhancedLiDAR_core.cpp  EnhancedLiDAR_node.cpp  pcl_test_core_explain.txt
